# llm-architecture-svg

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  release-please-config.json
.github/workflows/: pages.yml  publish.yml  release-please.yml
docs/: architecture-spec.md  gallery.md  llm-figure-spec.md  model-graph-spec.md  usage.md
examples/: api-basic.ts  api-custom-spec.ts  api-expanded.ts  api-profiles.ts  figure-lsa.ts  figure-ngram.ts  gallery.ts  llm-svg-batch.json  model-graph.ts  presentation-cross-attention.json
python/: pyproject.toml
python/llm_architecture_svg/: __init__.py  cli.py  tracer.py
python/tests/: test_tracer.py
site/: index.html  vite.config.ts
site/src/: App.tsx  styles.css
src/: cli.ts  figures.ts  generator.ts  index.ts  modelGraph.ts  profiles.ts  svg.ts  types.ts
