[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-architecture-svg-tracer"
version = "0.1.0"
description = "Optional PyTorch and HuggingFace tracers for llm-architecture-svg."
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
hf = ["transformers>=4.40"]
torch = ["torch>=2.1"]

[project.scripts]
llm-arch-trace = "llm_architecture_svg.cli:main"
